cargo-features = ["codegen-backend"]

[package]
name = "emulse"
version = "0.1.0"
authors = ["Lucas Leonardo <lucasleonardo@protonmail.com>"]
edition = "2021"
rust-version = "1.72"


[dependencies]
egui = { version = "0.27.0" }
log = "0.4"
image = { version = "0.24.0", features = ["jpeg", "tiff", "bmp", "rayon"] }
#bytemuck = { version = "1.16.0", features = ["derive"] }
cgmath = { version = "0.18.0", features = ["mint", "swizzle"] }
egui_extras = { version = "*", features = ["all_loaders", "image", "file"] }
egui_grid = "0.5.1"
miniquad = "=0.4.0"
egui_miniquad = { git = "https://github.com/not-fl3/egui-miniquad.git", branch = "master", package = "egui-miniquad" }
bytemuck = { version = "1.16.1", features = ["bytemuck_derive", "derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = "z"   # fast and small wasm
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
codegen-backend = "cranelift"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
