cargo-features = ["codegen-backend"]

[package]
name = "emulse"
version = "0.1.0"
authors = ["Lucas Leonardo <lucasleonardo@protonmail.com>"]
edition = "2021"
rust-version = "1.72"


[dependencies]
egui = { version = "0.28.1" }
log = "0.4"
image = { version = "0.25.0", features = ["jpeg", "tiff", "bmp"] }
cgmath = { version = "0.18.0", features = ["mint", "swizzle"] }
egui_extras = { version = "0.28.1", features = [
	"all_loaders",
	"image",
	"file",
] }
egui_grid = { git = "https://github.com/mythitorium/egui-grid.git", branch = "master" }
miniquad = "=0.4.0"
egui-miniquad = { version = "0.15.0" }
bytemuck = { version = "1.16.1", features = ["bytemuck_derive", "derive"] }
mut-rc = "0.1.2"
rayon = "1.10.0"
polodb_core = "4.4.1"
serde = { version = "1.0.204", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = "z"   # fast and small wasm
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
codegen-backend = "cranelift"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 1
